--- a/src/components/Blueprint/BlueprintGenerator/modules/BigBoy/BigBoy.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/BigBoy/BigBoy.module.css
@@ -82,7 +82,7 @@
     position: absolute;
     left: 1700px;
     top: 115px;
-    font-family: 'Erbaum';
+    font-family: 'Erbaum Medium';
     color: white;
     font-size: 50px;
 }
@@ -116,7 +116,7 @@
     top: 812px;
     left: 1750px;
 
-    font-family: 'Erbaum';
+    font-family: 'Erbaum Medium';
     color: white;
     font-size: 50px;
 }
@@ -126,7 +126,7 @@
     top: 912px;
     left: 1690px;
 
-    font-family: 'Erbaum';
+    font-family: 'Erbaum Medium';
     color: white;
     font-size: 50px;
 
