--- a/src/components/Blueprint/BlueprintGenerator/modules/looktotrade/LookToTradeModule.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/looktotrade/LookToTradeModule.module.css
@@ -9,7 +9,7 @@
 }
 
 .title {
-    font-family: 'Erbaum';
+    font-family: 'Erbaum Medium';
     font-size: 36px;
     width: 420px;
     text-align: center;
