--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ code {
     font-style: normal;
 }
 
-@font-face {
+/* @font-face {
     font-family: 'Erbaum';
     src: url('fonts/Erbaum-Medium.eot');
     src: local('Erbaum Medium'), local('Erbaum-Medium'),
@@ -42,6 +42,47 @@ code {
     font-style: normal;
 }
 
+*/ @font-face {
+    font-family: 'Erbaum';
+    src: local('Erbaum Regular'), local('Erbaum-Regular'),
+        url('fonts/erbaum/Erbaum-Regular.otf') format('opentype'),
+}
+
+@font-face {
+    font-family: 'Erbaum Bold';
+    src: local('Erbaum Bold'), local('Erbaum-Bold'),
+        url('fonts/erbaum/Erbaum-Bold.otf') format('opentype'),
+}
+
+@font-face {
+    font-family: 'Erbaum Book';
+    src: local('Erbaum Book'), local('Erbaum-Book'),
+        url('fonts/erbaum/Erbaum-Book.otf') format('opentype'),
+}
+
+@font-face {
+    font-family: 'Erbaum Light';
+    src: local('Erbaum Light'), local('Erbaum-Light'),
+        url('fonts/erbaum/Erbaum-Light.otf') format('opentype'),
+}
+
+@font-face {
+    font-family: 'Erbaum Medium';
+    src: local('Erbaum Medium'), local('Erbaum-Medium'),
+        url('fonts/erbaum/Erbaum-Medium.otf') format('opentype'),
+}
+
+@font-face {
+    font-family: 'Erbaum Thin';
+    src: local('Erbaum Thin'), local('Erbaum-Thin'),
+        url('fonts/erbaum/Erbaum-Thin.otf') format('opentype'),
+}
+
+@font-face {
+    font-family: 'Erbaum Black';
+    src: local('Erbaum Black'), local('Erbaum-Black'),
+        url('fonts/erbaum/Erbaum-Black.otf') format('opentype'),
+}
 @font-face {
     font-family: 'Acumin Pro';
     font-style: normal;
