--- a/src/components/Blueprint/v2/modules/SuggestedMovesModule/SuggestedMovesModule.module.css
+++ b/src/components/Blueprint/v2/modules/SuggestedMovesModule/SuggestedMovesModule.module.css
@@ -51,7 +51,7 @@
 }
 
 .sellLabelCol {
-    font-family: 'Erbaum';
+    font-family: 'Erbaum Medium';
     font-size: 24px;
     line-height: 0.9;
 
@@ -138,7 +138,7 @@
 }
 
 .buyLabel {
-    font-family: 'Erbaum';
+    font-family: 'Erbaum Medium';
     font-size: 24px;
 
     position: absolute;
