--- a/src/components/Blueprint/v2/modules/RisersFallersModule/RisersFallersModule.module.css
+++ b/src/components/Blueprint/v2/modules/RisersFallersModule/RisersFallersModule.module.css
@@ -10,24 +10,31 @@
 
     display: flex;
     flex-direction: row;
+    width: fit-content;
 }
 
-.nameColumn {
+.columnSection {
     display: flex;
     flex-direction: column;
-    gap: 5px;
-
+    height: 90px;
     width: 140px;
+    justify-content: space-evenly;
+    }
+    
+    .nameColumn {
     margin: 0 10px;
 }
 
-.risers {
-    align-items: end;
+.alignFlexEnd {
+    align-items: flex-end;
 }
 
 .wholeColumn {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    
+        height: 230px;
 }
 
 .columnBorder {
@@ -35,5 +42,6 @@
 }
 
 .arrowContainer {
-    height: 100px;
+    height: 117.5px;
+        display: flex;
 }
