--- a/src/components/Blueprint/v2/modules/BigBoy/BigBoy.module.css
+++ b/src/components/Blueprint/v2/modules/BigBoy/BigBoy.module.css
@@ -57,3 +57,12 @@
     bottom: 15px;
     left: 40px;
 }
+
+.teamName {
+    position: absolute;
+    top: 15px;
+    left: 60px;
+    font-family: 'Cheddar Gothic Rough';
+    font-size: 50px;
+    color: white;
+}
