outlook graph pngs

--- a/src/components/Blueprint/v2/modules/BigBoy/BigBoy.module.css
+++ b/src/components/Blueprint/v2/modules/BigBoy/BigBoy.module.css
@@ -66,3 +66,11 @@
     font-size: 50px;
     color: white;
 }
+
+.threeYearOutlook {
+    position: absolute;
+    transform-origin: top left;
+    scale: 0.25;
+    top: 591px;
+    left: 490px;
+}
