added labels - still need to add elite qb/te

--- a/src/components/Blueprint/v2/modules/BigBoy/BigBoy.module.css
+++ b/src/components/Blueprint/v2/modules/BigBoy/BigBoy.module.css
@@ -102,3 +102,13 @@
     top: 52px;
     left: 950px;
 }
+
+.archetypeGraphLabel {
+    position: absolute;
+    font-family: 'Erbaum Medium';
+    width: 250px;
+    text-align: center;
+    rotate: -90deg;
+    top: 690px;
+    left: 290px;
+}
