--- a/src/components/Blueprint/v2/modules/BigBoy/BigBoy.module.css
+++ b/src/components/Blueprint/v2/modules/BigBoy/BigBoy.module.css
@@ -145,3 +145,14 @@
     top: 790px;
     left: 1790px;
 }
+
+.suggestionsAndComments {
+    position: absolute;
+    color: white;
+    font-family: 'Acumin Pro';
+    font-size: 16px;
+    width: 350px;
+    height: 380px;
+    top: 200px;
+    left: 1790px;
+}
