--- a/src/components/Blueprint/infinite/Infinite/Infinite.module.css
+++ b/src/components/Blueprint/infinite/Infinite/Infinite.module.css
@@ -26,7 +26,7 @@
 .benchStringGraphic {
     position: absolute;
     left: 60px;
-    top: 1110px;
+    top: 1100px;
 
     color: white;
     font-family: 'Acumin Pro ExtraCondensed';
@@ -48,6 +48,10 @@
 
     right: 390px;
     top: 88px;
+}
+
+.buySellHoldGraphic {
+    position: absolute;
 }
 
 .teamNameGraphic {
