reduce bench string on huge benches

--- a/src/components/Blueprint/infinite/Infinite/Infinite.module.css
+++ b/src/components/Blueprint/infinite/Infinite/Infinite.module.css
@@ -36,15 +36,11 @@
 }
 
 .benchStringGraphicSmaller {
-    position: absolute;
-    left: 60px;
-    top: 1100px;
-
-    color: white;
-    font-family: 'Acumin Pro ExtraCondensed';
     font-size: 23px;
-    text-align: center;
-    width: 450px;
+}
+
+.benchStringGraphicSmallest {
+    font-size: 19px;
 }
 
 .positionalGradesGraphic {
