add domain logo in corner

--- a/src/components/Blueprint/infinite/Infinite/Infinite.module.css
+++ b/src/components/Blueprint/infinite/Infinite/Infinite.module.css
@@ -144,3 +144,10 @@
     height: 130px;
     transform-origin: bottom left;
 }
+
+.domainLogo {
+    position: absolute;
+    bottom: 50px;
+    right: 30px;
+    width: 250px;
+}
