--- a/src/components/Blueprint/infinite/Infinite/Infinite.module.css
+++ b/src/components/Blueprint/infinite/Infinite/Infinite.module.css
@@ -98,23 +98,20 @@
     color: #013049;
     width: 130px;
     text-align: center;
+    position: absolute;
+    top: 1390px;
+
 }
 
 .buys {
-    position: absolute;
-    top: 1390px;
     left: 60px;
 }
 
 .sells {
-    position: absolute;
-    top: 1390px;
     left: 212px;
 }
 
 .holds {
-    position: absolute;
-    top: 1390px;
     left: 364px;
 }
 
@@ -150,4 +147,15 @@
     bottom: 50px;
     right: 30px;
     width: 250px;
+}
+
+.bshComment {
+    position: absolute;
+    top: 1447px;
+
+    font-family: 'Acumin Pro ExtraCondensed';
+    color: white;
+    font-size: 16px;
+    width: 130px;
+    text-align: center;
 }
