--- a/src/components/Blueprint/rookieDraft/RookieDraft/RookieDraft.module.css
+++ b/src/components/Blueprint/rookieDraft/RookieDraft/RookieDraft.module.css
@@ -178,7 +178,7 @@
     top: 896px;
 }
 
-.downtier {
+.downtier, .uptier {
     background-color: #f08b21;
 }
 
@@ -186,7 +186,7 @@
     background-color: #9c509f;
 }
 
-.provenasset {
+.provenasset, .provenvet {
     background-color: #50c7e0;
 }
 
