add more picks in bigboy v1

--- a/src/components/Blueprint/v1/modules/BigBoy/BigBoy.module.css
+++ b/src/components/Blueprint/v1/modules/BigBoy/BigBoy.module.css
@@ -278,3 +278,10 @@
     flex-direction: row;
     gap: 20px;
 }
+
+.addRemovePickButtons {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    margin-top: 4px;
+}
