font color for live

--- a/src/components/Blueprint/Live/Live.module.css
+++ b/src/components/Blueprint/Live/Live.module.css
@@ -69,7 +69,7 @@
 
 .outlook {
     font-family: 'Acumin Pro ExtraCondensed';
-    color: white;
+    color: #003049;
     font-weight: bold;
     font-size: 29px;
 
