--- a/react-redraft/src/redraft/league-settings/league-settings.css
+++ b/react-redraft/src/redraft/league-settings/league-settings.css
@@ -60,35 +60,35 @@
 .scoring,
 .tep,
 .flex {
-  background-color: #F2725E;
+  background-color: #e8a080;
 }
 
 .qb {
-  background-color: #D84343;
+  background-color: #c15252;
 }
 
 .rb {
-  background-color: #5CD2DB;
+  background-color: #81c6c9;
 }
 
 .wr {
-  background-color: #60C08B;
+  background-color: #7ab274;
 }
 
 .te {
-  background-color: #F2B94B;
+  background-color: #f0c05f;
 }
 
 .def {
-  background-color: #5A67D8;
+  background-color: #7277cc;
   color: black;
 }
 
 .k {
-  background-color: #A060D1;
+  background-color: #be72ce;
   color: black;
 }
 
 .bench {
-  background-color: #A6A6BD;
+  background-color: #b3b3c4;
 }
