Styling + font + chart updates

--- a/react-redraft/src/redraft/starting-lineup/starters.css
+++ b/react-redraft/src/redraft/starting-lineup/starters.css
@@ -120,4 +120,5 @@
 .pos-wr    { border-color: #7ab274; } /* Green */
 .pos-te    { border-color: #f0c05f; } /* Gold */
 .pos-flex  { border-color: #e8a080; } /* Orange */
+.pos-sf { border-color: #e8a080; } /* Orange */
 .pos-bench { border-color: #b3b3c4; } /* Gray */
